--- a/Excercises/Week1/index.html
+++ b/Excercises/Week1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="traffic-light-2.js"></script>
+    <script src="traffic-light-2-v2.js"></script>
     <title>Document</title>
   </head>
   <body></body>
