--- a/Exercises/week2/index.html
+++ b/Exercises/week2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="experiments.js"></script>
+    <script src="/Exercises/week3/prep-exercises/find-mentors.js"></script>
     <title>Document</title>
   </head>
   <body></body>
